--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "mongodb/mongodb": "^1.18",
+        "mongodb/mongodb": "1.18",
         "vlucas/phpdotenv": "^5.6"
     }
 }
